<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_discover"
        android:orderInCategory="2"
        android:title="@string/discover" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="2"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite_empty"
        android:title="@string/favorite"
        android:orderInCategory="2"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:orderInCategory="2"/>
</menu>